--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -1,5 +1,4 @@
 {
-
   "navbar": {
     "changeLanguage": "Сменить язык",
     "links": [
@@ -56,23 +55,23 @@
     "header": "Наши достижения",
     "achievements": [
       {
-        "title": "Смелые Шаги Вперед",
-        "description": "Мы начали как небольшая идея, но наша решимость и преданность привели нас к большим победам. Мы осмелились перейти границы и предложить транспортное решение, которое изменило правила игры."
+        "title": "Быстрое и надежное обслуживание:",
+        "description": "Мгновенное подтверждение заказа, точное время прибытия и внимательные водители гарантируют, что клиенты \"iki taxi\" получают быстрое и надежное обслуживание, в то время как у конкурентов это может вызывать долгие ожидания и неудовлетворенность."
       },
       {
-        "title": "Создали уникальные тарифы для вашего комфорта",
-        "description": "Мы понимаем, что каждый клиент уникален. Поэтому мы предлагаем разнообразные тарифные планы, чтобы вы могли выбрать опцию, которая соответствует вашим потребностям и бюджету."
+        "title": "Прозрачная и справедливая ценовая политика",
+        "description": "\"iki taxi\" предлагает честные и прозрачные тарифы, которые рассчитываются исходя из расстояния и времени поездки. В отличие от некоторых конкурентов, у нас нет скрытых платежей или непредсказуемых наценок."
       },
       {
-        "title": "Мы гордимся нашим путем и смотрим в будущее",
-        "description": "Каждый день приносит нам новые вызовы и возможности. Мы готовы идти вперед, сделать больше для вас и продолжить изменять индустрию такси к лучшему."
+        "title": "Удобство и безопасность",
+        "description": "Приложение \"iki taxi\" предоставляет пользователю возможность отслеживать местоположение такси в реальном времени, а также выбирать предпочтительные опции (такие как тип автомобиля). Мы также обеспечиваем безопасность клиентов через проверку водителей и контроль качества, что делает \"iki taxi\" лучшим выбором с точки зрения комфорта и безопасности."
       }
     ]
   },
 
   "tariff": {
     "header": "Выберите подходящий тариф для ваших потребностей",
-    "headerDescribe": "Наши тарифы разработаны, чтобы соответствовать вашим потребностям и обеспечить максимальный комфорт во время поездки. Мы предлагаем разнообразные опции, включая экономичные варианты, комфортабельные автомобили, грузовые перевозки, а также VIP-услуги. Независимо от вашей цели и предпочтений, у нас есть подходящий тариф, который сделает вашу поездку приятной и удобной.",
+    "headerDescribe": "Наши тарифы разработаны, чтобы соответствовать вашим потребностям и обеспечить максимальный комфорт во время поездки. ",
     "plans": [
       {
         "title": "Эконом",
@@ -100,12 +99,11 @@
       }
     ]
   },
-
   "partners": {
     "blocks": [
       {
         "title": "Мы - компания 'iki taxi'",
-        "description": "специализирующаяся на предоставлении высококачественных услуг такси. Наша цель - сделать ваше перемещение комфортным и надежным."
+        "description": "Специализирующаяся на предоставлении высококачественных услуг такси. Наша цель - сделать ваше перемещение комфортным и надежным."
       },
       {
         "title": "1. Профессиональные водители:",
@@ -121,7 +119,6 @@
       }
     ]
   },
-
   "driverForm": {
     "header": "Преимущества работы с нами",
     "headingText": "Преимущества работы с нами",
@@ -147,7 +144,6 @@
       }
     ]
   },
-
   "application": {
     "submitApplication": "Отправить заявку на работу таксистом",
     "yourName": "Ваше имя",
@@ -157,6 +153,20 @@
     "yes": "Да",
     "no": "Нет",
     "submit": "Отправить заявку"
+  },
+  "footer": {
+    "company": "Компания",
+    "contact": "Контакты",
+    "aboutUs": "О нас",
+    "contactInfoList": "Это современная и надежная компания, предоставляющая высококачественные услуги по пассажирским перевозкам.",
+    "contacts": [
+      {
+        "text": "Адрес:",
+        "value": "Таджикистан, Худжанд, автовокзал 'Рохи Абрешим'"
+      },
+      {
+        "text": "Телефон:"
+      }
+    ]
   }
-
 }
